# Haru-Robo2024

./: A_star.py  DWA.py  MC_MPC.py  README.md  clothoid.py  memo
bt_ws/: HaruRobo_BT.btproj  catch_test.xml  integrated_test.xml  pos_control.xml  pos_control_ws.btproj
cubeIDE_ws/: .cproject  .project  harurobo2024 Debug.launch  harurobo2024.ioc
cubeIDE_ws/Core/Src/: freertos.c  gpio.c  main.c  tim.c
cubeIDE_ws/Debug/: HaruRobo2024.elf  HaruRobo2024.list  HaruRobo2024.map  harurobo2024.elf  harurobo2024.list  harurobo2024.map  makefile  sources.mk
cubeIDE_ws/Debug/CANLib/CAN_Main/: CAN_Main.d  subdir.mk
cubeIDE_ws/Debug/CANLib/Defines/: CAN_System_Def.d  subdir.mk
cubeIDE_ws/Debug/Core/Src/: dma_transport.d  freertos.cyclo  freertos.d  freertos.su  main.cyclo  main.d  main.su  stm32f7xx_it.su  tim.cyclo  tim.su
cubeIDE_ws/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_desc.d
objects/: Point2D.py  field.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/bt/lib/bt/: bt_node
ros2_ws/log/: latest_build
ros2_ws/src/bt/: CMakeLists.txt  package.xml
ros2_ws/src/bt/config/: pos_control.xml
ros2_ws/src/bt/include/: action_node.hpp  calib_node.hpp  catch_node.hpp  high_base_catch_node.hpp  low_base_catch_node.hpp  path_node.hpp
ros2_ws/src/bt/launch/: act_check.launch.py  teleop.launch.py
ros2_ws/src/bt/src/: bt_node.cpp  joy_control_node.cpp  pos_bt_node.cpp
ros2_ws/src/lidar_detect/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_detect/action/: Scan.action
ros2_ws/src/lidar_detect/include/: coordinate.hpp  lidar_scan.hpp  statistics.hpp
ros2_ws/src/lidar_detect/msg/: DetectResult.msg
ros2_ws/src/lidar_detect/src/: action_detect_node.cpp  dammy_client.cpp  scan_filter_node.cpp  server_detect_node.cpp  standalone_detect_node.cpp  visualization_node.cpp
ros2_ws/src/lidar_detect/srv/: Scan.srv
ros2_ws/src/manip/: CMakeLists.txt
ros2_ws/src/manip/action/: State.action
ros2_ws/src/manip/src/: manip_control_node.cpp  manip_joy_node.cpp
ros2_ws/src/manip_msgs/: CMakeLists.txt
ros2_ws/src/manip_msgs/msg/: Cmd.msg
ros2_ws/src/omni_control/: CMakeLists.txt
ros2_ws/src/omni_control/config/: duty_params.yaml
ros2_ws/src/omni_control/launch/: duty_teleop.launch.py
ros2_ws/src/omni_control/src/: duty_drive_node.cpp  duty_hardware_node.cpp  omni_joy_node.cpp
ros2_ws/src/path_following/: CMakeLists.txt
ros2_ws/src/path_following/action/: Calib.action
ros2_ws/src/path_following/include/: pid.hpp
ros2_ws/src/path_following/src/: dammy_calib_node.cpp  dammy_path_node.cpp  path_following_node.cpp  pid_calib_node.cpp  pid_pos_node.cpp
stm32_ws/: .cproject  .mxproject  .project  HaruRobo2024 Debug.launch  HaruRobo2024.launch
stm32_ws/Core/Src/: freertos.c
stm32_ws/Debug/: HaruRobo2024.elf  HaruRobo2024.list  HaruRobo2024.map  OmniPrac.elf  OmniPrac.list  OmniPrac.map  makefile  objects.list
stm32_ws/Debug/CANLib/CAN_Air/: subdir.mk
stm32_ws/Debug/CANLib/CAN_Servo/: subdir.mk
stm32_ws/Debug/Core/Src/: dma.d  freertos.cyclo  freertos.su  main.cyclo  pid.d  stm32f7xx_it.cyclo  subdir.mk
stm32_ws/Debug/USB_DEVICE/App/: usbd_cdc_if.d
uros_ws/install/: local_setup.sh  setup.sh
uros_ws/log/: latest_build
(+185 files in other folders)
